--- a/Inv_Front/index.html
+++ b/Inv_Front/index.html
@@ -5,21 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inventory Manager</title>
     <link rel="stylesheet" href="styles.css">
-
 </head>
 <body>
-    <h1>Inventory Management</h1>
-    <div id="item-form">
-        <input type="text" id="item-name" placeholder="Name">
-        <input type="number" id="item-quantity" placeholder="Quantity">
-        <input type="number" id="item-price" placeholder="Price">
-        <button onclick="addItem()">Add Item</button>
+   
+    <div class="sidebar-wrapper">
+        <div class="sidebar" id="sidebar">
+            <ul>
+                <div class="profile">
+                    
+                    <span>Username</span>
+                </div>
+                <li><i class="icon"><i class="fa-solid fa-house"></i></i><span>Home</span></li>
+                <li><i class="icon"><i class="fa-solid fa-envelope"></i></i><span>Emails</span></li>
+                <li><i class="icon"><i class="fa-solid fa-chart-column"></i></i><span>Charts</span></li>
+                <li><i class="icon"><i class="fa-solid fa-gem"></i></i><span>Premium</span></li>
+                <li><i class="icon"><i class="fa-solid fa-right-from-bracket"></i></i><span>Logout</span></li>
+            </ul>
+        </div>
+        <button class="toggle-btn" id="toggleBtn">
+            <i class="fa-solid fa-chevron-right">-></i>
+        </button>
     </div>
 
-    <h2>Inventory Items</h2>
-    <ul id="items-list">
-        
-    </ul>
+    <div class="content">
+        <h1 id="main_title">INVENTORY MANAGER</h1>
+        <h3>Please enter Item info:</h3>
+        <div id="item-form">
+            <input type="text" id="item-name" placeholder="Name">
+            <input type="number" id="item-quantity" placeholder="Quantity">
+            <input type="number" id="item-price" placeholder="Price">
+            <button onclick="addItem()">Add Item</button>
+        </div>
+
+        <h2>Inventory Items</h2>
+        <ul id="items-list"></ul>
+    </div>
 
     <script src="index.js"></script>
 </body>
