--- a/Inv_Front/index.html
+++ b/Inv_Front/index.html
@@ -16,15 +16,16 @@
                     <span>Username</span>
                 </div>
                 <li><i class="icon"><i class="fa-solid fa-house"></i></i><span>Home</span></li>
-                <li><i class="icon"><i class="fa-solid fa-envelope"></i></i><span>Emails</span></li>
+                <li><i class="icon"><i class="fa-solid fa-envelope"></i></i><span>Inventory Manager</span></li>
                 <li><i class="icon"><i class="fa-solid fa-chart-column"></i></i><span>Charts</span></li>
-                <li><i class="icon"><i class="fa-solid fa-gem"></i></i><span>Premium</span></li>
+                <li><i class="icon"><i class="fa-solid fa-gem"></i></i><span>Sales</span></li>
                 <li><i class="icon"><i class="fa-solid fa-right-from-bracket"></i></i><span>Logout</span></li>
             </ul>
+            <button class="toggle-btn" id="toggleBtn">
+                <i class="closed"></i>
+            </button>
         </div>
-        <button class="toggle-btn" id="toggleBtn">
-            <i class="fa-solid fa-chevron-right">-></i>
-        </button>
+        
     </div>
 
     <div class="content">
